# sq64

./: .gitignore  Makefile  README.md  pyproject.toml  run.cmd  run.sh  sq64.sh
docs/: index.html  search.js  sq64_chess.html  sq64_engine.html  sq64_ui.html
docs/sq64_chess/: board.html  constants.html  game.html  types.html
docs/sq64_engine/: client.html  engine.html  position.html  uci.html
docs/sq64_ui/: controller.html  gui.html  player.html  views.html
sq64/: __main__.py  app.py  chess.py  core.py  engine.py  game.py  gui.py  perft.py  player.py  position.py  search.py  tables.py  uci.py
tests/: test_perft.py  test_uci.py
