[project]
name = "sq64"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.7",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "vmprof>=0.4.18.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "W", "F", "B", "I", "UP", "C4",
               "RET", "SIM", "ISC", "SLOT", "PTH", "ANN"]
lint.ignore = ["F401", "E701"] #, "E501"]
